Sun Aug 20 16:17:00 BST 2000 Olly Betts

	* Overhaul of LocalMatch: get_max_weight deprecated and now just
	  throws OmUnimplementedError; various class members now just local
	  to get_mset; renamed recalculate_maxweight to recalculate_w_max
	  since it forces recalculation of w_max and not max_weight

	* includetest now checks that found headers are actually files
	  and ignores any headers in bindings (not just java related ones)

Sun Aug 20 14:19:00 BST 2000 Olly Betts

	* Added support for muscat36 da backend to backendmanager (uses
	  makeDA program, so only works on Linux).  Some tests won't work
	  with this backend as it doesn't support word-based positional
	  information or document lengths.

	* Sucked repeated code for running tests in apitest into a macro.

	* Can now restrict apitest to use one backend like so:
	  OM_TEST_BACKEND=inmemory ./apitest

Sat Aug 19 19:24:00 BST 2000 Olly Betts

	* nettest now guesses srcdir like apitest does.

Sat Aug 19 18:39:00 BST 2000 Olly Betts

	* Added testcase for handling of multiple postings of a term at the
	  same position (adddoc1).

	* Fixed wdf handling in inmemory backend.

	* Fixed handling of writable databases in BackendManager (they can't
	  safely be reused as the previous test may have altered the
	  contents).

	* Added new test category to apitest: tests that need a writable
	  database.

Sat Aug 19 15:01:00 BST 2000 Olly Betts

	* Muscat36 db backend now autodetects flimsy vs heavyduty

Sat Aug 19 12:30:00 BST 2000 Olly Betts

	* Naming consistency - now always say "sleepycat" never "sleepy".
	  Only externally visible effect is in options to configure.

	* A few header multiple inclusion guards were misnamed - fixed.

Fri Aug 18 17:49:00 BST 2000 Olly Betts

	* Pruned completed and no-longer-relevant tasks from TODO.

	* DatabaseBuilder now throws OmFeatureUnavailableError rather than
	  OmOpeningError if you try to use a backend which isn't compiled in.
