@@ -276,13 +276,13 @@ AC_ARG_ENABLE(backend_multi,
   *) AC_MSG_ERROR(bad value ${enableval} for --enable-backend-multi) ;;
 esac],[build_multi=true])
 
-AC_ARG_ENABLE(backend_net,
-[  --enable-backend-net    Enable the net database backend (default=yes)],
+AC_ARG_ENABLE(backend_remote,
+[  --enable-backend-remote Enable the remote database backend (default=yes)],
 [case "${enableval}" in
-  yes) build_net=true ;;
-  no)  build_net=false ;;
-  *) AC_MSG_ERROR(bad value ${enableval} for --enable-backend-net) ;;
-esac],[build_net=true])
+  yes) build_remote=true ;;
+  no)  build_remote=false ;;
+  *) AC_MSG_ERROR(bad value ${enableval} for --enable-backend-remote) ;;
+esac],[build_remote=true])
 
 AC_ARG_ENABLE(pthread-support,
 [  --enable-pthread-support Enable pthread support (no|yes)(default=yes)],
@@ -365,7 +365,7 @@ AM_CONDITIONAL(BUILD_BACKEND_SLEEPYCAT, test x$build_sleepycat = xtrue)
 AM_CONDITIONAL(BUILD_BACKEND_QUARTZ, test x$build_quartz = xtrue)
 AM_CONDITIONAL(BUILD_BACKEND_INMEMORY, test x$build_inmemory = xtrue)
 AM_CONDITIONAL(BUILD_BACKEND_MULTI, test x$build_multi = xtrue)
-AM_CONDITIONAL(BUILD_BACKEND_NET, test x$build_net = xtrue)
+AM_CONDITIONAL(BUILD_BACKEND_REMOTE, test x$build_remote = xtrue)
 AM_CONDITIONAL(BUILD_PTHREAD_SUPPORT, test x$use_pthread = xtrue)
 
 dnl Set defines to specify what we compile
@@ -395,7 +395,7 @@ AC_DEFINE(MUS_BUILD_BACKEND_MULTI,,
   [Define if you want to build multi database backend])
 fi
 
-if test x$build_net = xtrue; then
+if test x$build_remote = xtrue; then
 dnl Add -lsocket to $LDFLAGS if needed (eg Solaris)
 CME_FIND_SOCKETPAIR
 
@@ -405,8 +405,8 @@ RJB_FIND_GETHOSTENT
 dnl See if we want to use STLport
 RJB_FIND_STLPORT
 
-AC_DEFINE(MUS_BUILD_BACKEND_NET,,
-  [Define if you want to build net database backend])
+AC_DEFINE(MUS_BUILD_BACKEND_REMOTE,,
+  [Define if you want to build remote database backend])
 fi
 
 if test x$use_pthread = xtrue; then
