@@ -1,12 +1,17 @@
+Sun Aug 20 17:12:00 BST 2000 Olly Betts
+
+	* Started to rename net/network backend to remote (passes make check
+	  at this point).
+
 Sun Aug 20 16:17:00 BST 2000 Olly Betts
 
 	* Overhaul of LocalMatch: get_max_weight deprecated and now just
 	  throws OmUnimplementedError; various class members now just local
 	  to get_mset; renamed recalculate_maxweight to recalculate_w_max
-	  since it forces recalculation of w_max and not max_weight
+	  since it forces recalculation of w_max and not max_weight.
 
 	* includetest now checks that found headers are actually files
-	  and ignores any headers in bindings (not just java related ones)
+	  and ignores any headers in bindings (not just java related ones).
 
 Sun Aug 20 14:19:00 BST 2000 Olly Betts
 
